[package]
name = "simulated_annealing"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["ws", "json"] }
itertools = "0.12.1"
num = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"
prost = "0.12"

[dev-dependencies]
num = "0.4.1"

[build-dependencies]
tonic-build = "0.11"
